--- a/north-blog-back/north-admin/src/main/resources/application-mysql.yml
+++ b/north-blog-back/north-admin/src/main/resources/application-mysql.yml
@@ -1,9 +1,9 @@
 # 数据源配置
 spring:
     datasource:
-        url: jdbc:mysql://localhost:3306/north_blog?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&useSSL=true&serverTimezone=GMT%2B8
+        url: jdbc:mysql://10.2.12.214:3306/ice_blog?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&useSSL=true&serverTimezone=GMT%2B8
         driverClassName: com.mysql.cj.jdbc.Driver
-        username: root
+        username: luoke
         password: lkq413554
         type: com.alibaba.druid.pool.DruidDataSource
         druid:
