--- a/north-blog-back/north-admin/src/main/resources/application.yml
+++ b/north-blog-back/north-admin/src/main/resources/application.yml
@@ -1,9 +1,27 @@
 server:
   port: 9111
+token:
+  # token 令牌的 header 标识
+  header: Authorization
+  # token 有效时间(分钟),默认30分钟
+  expire: 30
 spring:
   profiles:
-    active: mysql
+    active: mysql,redis
   application:
     name: north-admin
+  jackson:
+    time-zone: GMT+8
+    date-format: yyyy-MM-dd HH:mm:ss
 mybatis-plus:
   mapper-locations: classpath*:/mapper/**/*.xml
+  configuration:
+    cache-enabled: true
+logging:
+  level:
+    root: info
+    com:
+      luoke:
+        northblog:
+          admin:
+            mapper: debug
