--- a/north-blog-back/pom.xml
+++ b/north-blog-back/pom.xml
@@ -29,13 +29,14 @@
         <spring-boot.version>2.4.2</spring-boot.version>
         <spring-cloud-alibaba.version>2021.1</spring-cloud-alibaba.version>
         <spring-cloud.version>2020.0.1</spring-cloud.version>
-        <mybatis.plus.boot.starter.version>3.4.1</mybatis.plus.boot.starter.version>
+        <mybatis.plus.boot.starter.version>3.4.3.4</mybatis.plus.boot.starter.version>
         <mysql.version>8.0.22</mysql.version>
         <druid.version>1.2.6</druid.version>
         <springfox-boot.version>3.0.0</springfox-boot.version>
         <lombok.version>1.18.20</lombok.version>
         <fastjson.version>1.2.78</fastjson.version>
         <jackson-databind.version>2.11.4</jackson-databind.version>
+        <hutool.version>5.7.15</hutool.version>
     </properties>
 
     <dependencyManagement>
@@ -116,6 +117,12 @@
                 <version>${jackson-databind.version}</version>
             </dependency>
 
+            <!--hutool 工具包-->
+            <dependency>
+                <groupId>cn.hutool</groupId>
+                <artifactId>hutool-all</artifactId>
+                <version>${hutool.version}</version>
+            </dependency>
 
         </dependencies>
     </dependencyManagement>
@@ -143,6 +150,12 @@
         <dependency>
             <groupId>io.springfox</groupId>
             <artifactId>springfox-boot-starter</artifactId>
+        </dependency>
+
+        <!--hutool 工具包-->
+        <dependency>
+            <groupId>cn.hutool</groupId>
+            <artifactId>hutool-all</artifactId>
         </dependency>
 
     </dependencies>
