--- a/vue-blog-admin/package.json
+++ b/vue-blog-admin/package.json
@@ -10,8 +10,12 @@
   "dependencies": {
     "@element-plus/icons": "^0.0.11",
     "animate.css": "^4.1.1",
+    "axios": "^0.24.0",
     "core-js": "^3.6.5",
     "element-plus": "^1.1.0-beta.12",
+    "js-cookie": "^3.0.1",
+    "svg-sprite-loader": "^6.0.11",
+    "vditor": "^3.8.7",
     "vue": "^3.0.0",
     "vue-particles": "^1.0.9",
     "vue-router": "^4.0.0-0",
@@ -37,6 +41,9 @@
     "sass": "^1.41.0",
     "sass-loader": "^10.2.0",
     "style-loader": "^2.0.0",
+    "svgo": "^1.1.0",
+    "svgo-loader": "^2.1.0",
+    "vue-cli-plugin-svg-sprite": "~1.1.0",
     "vue-devtools": "^5.1.4"
   }
 }
