1. 从securityConfig中分离出loginSuccessHandler和loginFailureHandler 2.修改包名northblog 为iceblog

--- a/north-blog-back/north-admin/src/main/resources/application.yml
+++ b/north-blog-back/north-admin/src/main/resources/application.yml
@@ -22,6 +22,6 @@ logging:
     root: info
     com:
       luoke:
-        northblog:
+        iceblog:
           admin:
             mapper: debug
