修改north-admin 模块名为ice-admin

--- a/north-blog-back/pom.xml
+++ b/north-blog-back/pom.xml
@@ -3,7 +3,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modules>
         <module>north-common</module>
-        <module>north-admin</module>
+        <module>ice-admin</module>
     </modules>
 
     <parent>
