--- a/north-blog-back/ice-admin/pom.xml
+++ b/north-blog-back/ice-admin/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>north-admin</artifactId>
+    <artifactId>ice-admin</artifactId>
 
     <packaging>jar</packaging>
 
