--- a/north-blog-back/ice-admin/pom.xml
+++ b/north-blog-back/ice-admin/pom.xml
@@ -16,7 +16,7 @@
     <dependencies>
         <dependency>
             <groupId>${groupId}</groupId>
-            <artifactId>north-common</artifactId>
+            <artifactId>ice-common</artifactId>
             <version>${version}</version>
         </dependency>
         <!-- spring boot web 依赖-->
