--- a/north-blog-back/ice-common/pom.xml
+++ b/north-blog-back/ice-common/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>north-common</artifactId>
+    <artifactId>ice-common</artifactId>
     <dependencies>
         <!-- spring boot web 依赖-->
         <dependency>
